# MyNewProject

./: .coveragerc  .gitattributes  .gitlab-ci.yml  CONTRIBUTING.rst  MANIFEST.in  README.rst  add_point.py  combine_matrixs.py  combine_single_matrix.py  draw_sphere_with_angles.py  draw_sphere_with_angles_boundaries.py  example_code.py  generate_rotation_matrix.py  learn.py  mynewproject.py  project.py  pyproject.toml  rotation_matrix_3_3.py  tox.ini
.github/workflows/: ci.yml
docs/: .gitignore  conf.py  requirements.rst
my_new_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mynewproject/: __init__.py  __main__.py
mynewproject/ui/: __init__.py  mynewproject_command_line.py  mynewproject_demo.py
tests/: test_mynewproject.py
